log
Wed 24 Apr 2024 07:22:05 PM UTC: 
 tests:  0|6
total_score: 0/70
413d21c
Wed 24 Apr 2024 07:32:21 PM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
f0b454b
Wed 24 Apr 2024 07:38:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
327712e
Wed 24 Apr 2024 07:40:01 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
7e1fe25
Wed 24 Apr 2024 07:42:30 PM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:64:26: error: expected ‘;’ before ‘}’ token
   64 |     map->current=posicion
      |                          ^
      |                          ;
   65 | 
   66 |   }
      |   ~                       
Compilation failed
4a883b2
Wed 24 Apr 2024 07:42:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
77e8931
Wed 24 Apr 2024 07:54:51 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:42:1: error: expected identifier or ‘(’ before ‘{’ token
   42 | {
      | ^
Compilation failed
baf0467
Wed 24 Apr 2024 07:56:12 PM UTC: 
 hashmap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
d3f23d7
Wed 24 Apr 2024 07:56:24 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|5
total_score: 20/70
d3f23d7
Wed 24 Apr 2024 07:56:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8b2973c
